fix: Write as stream not as string to accomodate weird chars